# serializer version: 1
# name: test_get_devices
  list([
    Device(device_type=<DeviceType.SCALE: 'Scale'>, battery=<DeviceBattery.HIGH: 'high'>, model=<DeviceModel.BODY_PLUS: 5>, first_session_date=None, last_session_date=datetime.datetime(2023, 9, 4, 22, 39, 39, tzinfo=datetime.timezone.utc), device_id='f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d', hashed_device_id='f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d'),
    Device(device_type=<DeviceType.SCALE: 'Scale'>, battery=<DeviceBattery.HIGH: 'high'>, model=<DeviceModel.BODY_PLUS: 5>, first_session_date=datetime.datetime(2023, 9, 4, 22, 39, 39, tzinfo=datetime.timezone.utc), last_session_date=None, device_id='f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d', hashed_device_id='f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d'),
  ])
# ---
# name: test_get_new_device
  list([
    Device(device_type=<DeviceType.UNKNOWN: 'unknown'>, battery=<DeviceBattery.HIGH: 'high'>, model=<DeviceModel.UNKNOWN: 0>, first_session_date=None, last_session_date=datetime.datetime(2023, 9, 4, 22, 39, 39, tzinfo=datetime.timezone.utc), device_id='f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d', hashed_device_id='f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d'),
  ])
# ---
